tests/negative_tests/syntax_errors/incomplete_expr.c
// INVALID - Syntax Error: incomplete expression
// Expected: "expected expression"
int main() {
    int x;
    x = ;  // ERROR: missing expression after '='
    return x;
}
